[project]
name = "PUE_SS25_Sakai_Aufgaben"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gs0232", email = "gs0232@mci4me.at"},
]
dependencies = ["numpy>=2.0.2", "pandas>=2.2.3", "matplotlib>=3.9.4", "streamlit>=1.45.1", "ipykernel>=6.29.5", "plotly>=6.1.2", "nbformat>=5.10.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
